# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  draw_maze.py  generator.py  main.py  parse.py  pyproject.toml
src/: a_maze_ing.py  draw_maze.py  flimsy_generator.py  generator.py  interactive_menu.py  parse.py  parser.py  renderer.py  solver.py  utils.py  video_game.py
src/interactive_menu/: __init__.py  interactive_menu.py
src/mazegen/: README.md  __init__.py  generator.py  mazegen.py  pyproject.toml
src/parser/: __init__.py  parser.py
src/renderer/: __init__.py  renderer.py
src/solver/: __init__.py  solver.py
src/utils/: __init__.py  utils.py
src/video_game/: __init__.py  video_game.py
