[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze Generator"
readme = { file = "src/mazegen/README.md", content-type = "text/markdown" } 
requires-python = ">=3.10"
authors = [{ name = "Alex Anton" }, { name = "Sergio Lopez" }]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
